--- a/.ai-history/2025-01-07_01h-22m-53s_chatgpt_1736202173.md
+++ b/.ai-history/2025-01-07_01h-22m-53s_chatgpt_1736202173.md
@@ -1,3 +1,29 @@
+# Make keymaps configurable
+
+I install the plugin with this code:
+
+```lua
+{
+    "rktmb/rktmb-deepseek-complete.nvim",
+}
+```
+
+I want the users to be able to configure the keymaps.
+Currently, the keymaps are hardcoded in `./plugin/init.lua`.
+
+Propose me the modifications to `./plugin/init.lua` to allow users to configure the keymaps but keep the current behavior if they don't configure anything.
+
+
+
+# This is gpt-4o-mini answer (2k in, 2k out)
+
+To make the keymaps configurable in your Neovim plugin, you can introduce a configuration table that allows users to specify their desired key mappings. If the user does not provide any configuration, the plugin will fall back to the default key mappings.
+
+Here’s how you can modify `plugin/init.lua` to achieve this:
+
+### Modified `plugin/init.lua`
+
+```lua
 local rktmb_deepseek_complete = require("rktmb-deepseek-complete")
 local curl = require('plenary.curl')
 
@@ -6,16 +32,30 @@ _G.ns_id = vim.api.nvim_create_namespace('rktmb-deepseek-complete')
 _G.current_extmark_id = nil
 _G.current_suggestion = nil
 
--- Default keymappings
-local default_opts = {
-  suggest_keymap = "<M-ESC>",
-  accept_all_keymap = "<M-PageDown>",
-  accept_line_keymap = "<M-Down>",
+-- Default key mappings
+local default_keymaps = {
+  suggest = "<M-ESC>",
+  accept = "<M-PageDown>",
 }
 
--- Read user configuration
-local user_opts = vim.tbl_deep_extend("force", default_opts, vim.g.rktmb_deepseek_complete_opts or {})
+-- User configurable key mappings
+local user_keymaps = {}
 
+-- Function to set key mappings
+local function set_keymaps()
+  local keymaps = vim.tbl_deep_extend("force", {}, default_keymaps, user_keymaps)
+
+  vim.api.nvim_set_keymap("i", keymaps.suggest, "<Cmd>lua suggest()<CR>", { noremap = true, silent = true })
+  vim.api.nvim_set_keymap("i", keymaps.accept, "<Cmd>lua accept_the_whole_suggestion()<CR>", { noremap = true, silent = true })
+end
+
+-- Function to configure the plugin
+function _G.configure_deepseek_keymaps(config)
+  if config and config.keymaps then
+    user_keymaps = config.keymaps
+  end
+  set_keymaps()
+end
 
 local function process_deepseek_response(response)
   if response.status == 200 then
@@ -79,7 +119,6 @@ local function process_deepseek_response(response)
     rktmb_deepseek_complete.log("Response body:\n" .. response.body)
   end
 end
-
 
 _G.suggest = function()
   local cursor_position_table = vim.api.nvim_win_get_cursor(0)
@@ -164,13 +203,6 @@ _G.suggest = function()
   })
 end
 
-vim.api.nvim_create_autocmd("InsertLeave", {
-  pattern = "*",
-  callback = function()
-    vim.api.nvim_buf_clear_namespace(0, ns_id, 0, -1)
-  end
-})
-
 _G.accept_the_whole_suggestion = function()
   if not _G.current_extmark_id or not _G.current_suggestion then
     -- No active suggestion to accept
@@ -189,51 +221,41 @@ _G.accept_the_whole_suggestion = function()
   _G.current_suggestion = nil
 end
 
--- Above, we have the function to accept the whole suggestion.
--- Below I want to set a way to accept only one line of the suggestion.
--- Fill the content of the function below in order to achieve that.
-_G.accept_one_suggestion_line = function()
-  if not _G.current_extmark_id or not _G.current_suggestion then
-    -- No active suggestion to accept
-    return
+vim.api.nvim_create_autocmd("InsertLeave", {
+  pattern = "*",
+  callback = function()
+    vim.api.nvim_buf_clear_namespace(0, ns_id, 0, -1)
   end
+})
 
-  local bufnr = 0
-  local cursor_pos = vim.api.nvim_win_get_cursor(0)
-  local current_line = cursor_pos[1]
+-- Set key mappings
+set_keymaps()
+```
 
-  -- Get the first line of the suggestion
-  local first_suggestion_line = _G.current_suggestion[1]
+### Explanation of Changes
 
-  -- Insert the first line of the suggestion into the buffer
-  vim.api.nvim_buf_set_lines(bufnr, current_line -1 , current_line - 1, false, { first_suggestion_line })
+1. **Default Key Mappings**: A `default_keymaps` table is created to hold the default key mappings.
 
-  -- Move the cursor to the next line
-  vim.api.nvim_win_set_cursor(0, { current_line, #first_suggestion_line })
+2. **User Configurable Key Mappings**: A `user_keymaps` table is introduced to store user-defined key mappings.
 
+3. **Key Mapping Function**: The `set_keymaps` function merges the default key mappings with any user-defined mappings and sets them.
 
-  -- Remove the first line from the suggestion
-  table.remove(_G.current_suggestion, 1)
+4. **Configuration Function**: The `_G.configure_deepseek_keymaps` function allows users to pass a configuration table to set their key mappings.
 
-  -- If the suggestion is now empty, remove the extmark
-  if #_G.current_suggestion == 0 then
-    vim.api.nvim_buf_del_extmark(bufnr, ns_id, _G.current_extmark_id)
-    _G.current_extmark_id = nil
-    _G.current_suggestion = nil
-  else
-    -- Update the extmark with the remaining lines
-      local virt_lines = {}
-      for _, line in ipairs(_G.current_suggestion) do
-        table.insert(virt_lines, { { line, "Comment" } }) -- Use "Comment" highlight group for grey text
-      end
-    vim.api.nvim_buf_set_extmark(0, ns_id, current_line, 0, {
-      virt_lines = virt_lines,
-      virt_lines_above = false, -- Place the virtual lines below the current line
-      hl_mode = 'combine'       -- Combine with existing text highlighting
-    })
-  end
-end
+5. **Initialization**: The `set_keymaps` function is called at the end of the file to set the key mappings when the plugin is loaded.
 
-vim.api.nvim_set_keymap("i", user_opts.suggest_keymap,      "<Cmd>lua suggest()<CR>",                     { noremap = true, silent = true })
-vim.api.nvim_set_keymap("i", user_opts.accept_all_keymap,   "<Cmd>lua accept_the_whole_suggestion()<CR>", { noremap = true, silent = true })
-vim.api.nvim_set_keymap("i", user_opts.accept_line_keymap,  "<Cmd>lua accept_one_suggestion_line()<BR>",  { noremap = true, silent = true })
+### Usage
+
+Users can configure the key mappings in their Neovim configuration like this:
+
+```lua
+require('rktmb-deepseek-complete').configure_deepseek_keymaps({
+  keymaps = {
+    suggest = "<C-S>",  -- Change to desired key for suggestion
+    accept = "<C-A>",   -- Change to desired key for accepting suggestion
+  }
+})
+```
+
+This way, if users do not provide any configuration, the plugin will use the default key mappings.
+
