--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -11,3 +11,18 @@ But my code uses `changedtick` to detect the most recently visited buffer.
 Maybe I should use `lastused` instead?
 
 Tell what changes I need to make to `./lua/rktmb-deepseek-complete.lua` to achieve what I want.
+
+# Make keymaps configurable
+
+I install the plugin with this code:
+
+```lua
+{
+    "rktmb/rktmb-deepseek-complete.nvim",
+}
+```
+
+I want the users to be able to configure the keymaps.
+Currently, the keymaps are hardcoded in `./plugin/init.lua`.
+
+Propose me the modifications to `./plugin/init.lua` to allow users to configure the keymaps but keep the current behavior if they don't configure anything.
