accept one line then re-suggest

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,28 +1,8 @@
-# Get the list of opened buffers
+# Accept the first line of the suggestion and triger again
 
-In `./lua/rktmb-deepseek-complete.lua`, I want a function that lists open buffers, ordered by most recent visited.
+There is a keymap and a function to accept the whole suggestion: `_G.accept_the_whole_suggestion`.
 
-Tell me the code for that.
+I want to accept the first line of the suggestion with a keymap `<M-Down>`.
+I also want that when I accept the first line, the remaining suggestions lines are discarded and another suggestion is triggered based on that accepted line.
 
-# Invalid option name "changedtick"
-
-In `./lua/rktmb-deepseek-complete.lua`, I want to sort the list of buffers by most recently visited.
-But my code uses `changedtick` to detect the most recently visited buffer.
-Maybe I should use `lastused` instead?
-
-Tell what changes I need to make to `./lua/rktmb-deepseek-complete.lua` to achieve what I want.
-
-# Make keymaps configurable
-
-I install the plugin with this code:
-
-```lua
-{
-    "rktmb/rktmb-deepseek-complete.nvim",
-}
-```
-
-I want the users to be able to configure the keymaps.
-Currently, the keymaps are hardcoded in `./plugin/init.lua`.
-
-Propose me the modifications to `./plugin/init.lua` to allow users to configure the keymaps but keep the current behavior if they don't configure anything.
+Tell me what I need to change in the code to achieve what I want.
