--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -6,3 +6,10 @@ I want to accept the first line of the suggestion with a keymap `<M-Down>`.
 I also want that when I accept the first line, the remaining suggestions lines are discarded and another suggestion is triggered based on that accepted line.
 
 Tell me what I need to change in the code to achieve what I want.
+
+# `M.get_buffer_content` is not returning anything
+
+In `./lua/rktmb-deepseek-complete.lua`, I want to get the content of a given buffer.
+But my function `M.get_buffer_content` is not returning anything.
+
+Analyze the code and tell me what I need to change to get the content of a given buffer.
