--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -9,7 +9,14 @@ Tell me what I need to change in the code to achieve what I want.
 
 # `M.get_buffer_content` is not returning anything
 
+I use to open neovim with a glob pattern to open multiple files at once.
+For example, I can open multiple files with `nvim *.lua **/*.lua`. 
+Then I only visit one buffer.
+
 In `./lua/rktmb-deepseek-complete.lua`, I want to get the content of a given buffer.
 But my function `M.get_buffer_content` is not returning anything.
 
-Analyze the code and tell me what I need to change to get the content of a given buffer.
+The problem is that the `M.get_buffer_content` function only returns the content of a buffer I visited.
+I need a way to get the content of a buffer even if I haven't visited it.
+
+Analyze the code and tell me what I need to change to get the content of all buffers, even if I haven't visited them.
