--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,22 +1,10 @@
 # Accept the first line of the suggestion and triger again
 
-There is a keymap and a function to accept the whole suggestion: `_G.accept_the_whole_suggestion`.
+There is a keymap and a function to accept the first line of a suggestion: `_G.accept_one_suggestion_line()`.
 
-I want to accept the first line of the suggestion with a keymap `<M-Down>`.
-I also want that when I accept the first line, the remaining suggestions lines are discarded and another suggestion is triggered based on that accepted line.
+It accepts the first line of the suggestion with the keymap `<M-Down>`.
+When I accept the first line, the remaining suggestions lines are discarded and another suggestion is triggered based on that accepted line.
 
-Tell me what I need to change in the code to achieve what I want.
+The problem is the accepted line goes one line above the current line of the cursor. I do not have that problem with the `_G.accept_the_whole_suggestion()` function.
 
-# `M.get_buffer_content` is not returning anything
-
-I use to open neovim with a glob pattern to open multiple files at once.
-For example, I can open multiple files with `nvim *.lua **/*.lua`. 
-Then I only visit one buffer.
-
-In `./lua/rktmb-deepseek-complete.lua`, I want to get the content of a given buffer.
-But my function `M.get_buffer_content` is not returning anything.
-
-The problem is that the `M.get_buffer_content` function only returns the content of a buffer I visited.
-I need a way to get the content of a buffer even if I haven't visited it.
-
-Analyze the code and tell me what I need to change to get the content of all buffers, even if I haven't visited them.
+Analyze the code, compare the functions and tell me the modifications I have to make to get the accepted line below the line of the cursor.
