--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,10 +1,12 @@
-# Accept the first line of the suggestion and triger again
+# Consider error message as a suggestion, if any
 
-There is a keymap and a function to accept the first line of a suggestion: `_G.accept_one_suggestion_line()`.
+In `./plugin/init.lua`, the function   `process_deepseek_response()` is called when the DeepSeek API returns a response.
 
-It accepts the first line of the suggestion with the keymap `<M-Down>`.
-When I accept the first line, the remaining suggestions lines are discarded and another suggestion is triggered based on that accepted line.
+If the response code is 200, it performes the suggestion insertion in the buffer.
+For other response codes, it logs the error messages and does nothing more.
 
-The problem is the accepted line goes one line above the current line of the cursor. I do not have that problem with the `_G.accept_the_whole_suggestion()` function.
+For 200 to 599 response codes, the error message is in `body.choices[1].message.content` , it is the same JSON path when success and failure.
 
-Analyze the code, compare the functions and tell me the modifications I have to make to get the accepted line below the line of the cursor.
+I want that for 400 to 599 response codes also, the error messages are logged and also inserted as suggestions in the buffer.
+
+Tell me the modifications I have to make to get the error messages logged and also inserted as suggestions in the buffer.
