--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,16 +1,23 @@
-# Implement the "finish the sentence" feature
+# Propose inline suggestions from DeepSeek API
 
-The "finish the sentence" feature uses the DeepSeek API to complete the current sentence.
+The final purpose of this project is to be an inline suggestion plugin that uses the DeepSeek API to suggest completions.
 
-- The user types letters in the current buffer.
-- The suggestion is triggered by the user typing letters, spaces, or punctuation marks.
-- The suggestion is appended to the current line the cursor is on.
-- The user can accept the suggestion by pressing the `<M-Right>` key.
-- If the user continues typing letters, the must be updated by querying the DeepSeek API.
+I already have some pieces of code.
+I need you to generate the missing parts.
 
-This feature is different from the current one as:
-- The current one is triggered by issuing a keymap: `<M-ESC>`. The "finish the sentence" feature is triggered by typing letters, spaces, or punctuation marks.
-- The current feature suggests whole lines and suggestions are placed below the current line. The "finish the sentence" feature suggests the continuation of the current line and suggestions are placed at the end of the current line.
+## Step 1: Get the text from the beginning of the current buffer to the cursor
+
+The cursor position is a tuple of (row, column), where row is the line number and column is the character position within the line.
+The code to get the text from the beginning of the current buffer to the cursor is `./lua/rktmb-deepseek-complete.lua` function `M.get_text_before_cursor()`.
+
+## Step 2: Get the text from the cursor to the end of the current buffer
+
+In `./lua/rktmb-deepseek-complete.lua` I created the function `M.get_text_after_cursor()` 
+that returns the text from the cursor to the end of the current buffer.
+
+## Step 3: Query the DeepSeek API
+
+When the user presses `<M-ESC>`, the function `suggest()` is called.
 
 
-We will keep the current feature working and ADD the "finish the sentence" feature to the code.
+
