--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -20,4 +20,12 @@ that returns the text from the cursor to the end of the current buffer.
 When the user presses `<M-ESC>`, the function `suggest()` is called.
 
 
+# E5560: Vimscript function must not be called in a Lua callback
+
+In `./plugin/init.lua` I have a function `process_deepseek_response()` that is called in the callback of the curl request.
+The problem is that the function `process_deepseek_response()` must decode a json string, but it is a vimscript function.
+
+Propose me the changes needed to make to able to decode the json in the response.
+I think about using something linke `vim.schedule`, `vim.schedule_wrap`, or any `vim.*` function that could help me.
+
 
