--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -17,15 +17,9 @@ that returns the text from the cursor to the end of the current buffer.
 
 ## Step 3: Query the DeepSeek API
 
-When the user presses `<M-ESC>`, the function `suggest()` is called.
+When the user presses `<M-ESC>`, the function `suggest()` is called. That is the behavior I want.
 
+Now I want that if in INSERT mode and the user presses a letter key, a punctuation key, or a space, `suggest()` is called.
 
-# E5560: Vimscript function must not be called in a Lua callback
-
-In `./plugin/init.lua` I have a function `process_deepseek_response()` that is called in the callback of the curl request.
-The problem is that the function `process_deepseek_response()` must decode a json string, but it is a vimscript function.
-
-Propose me the changes needed to make to able to decode the json in the response.
-I think about using something linke `vim.schedule`, `vim.schedule_wrap`, or any `vim.*` function that could help me.
-
+Tell me what modifications I need to make to the code in order to achieve that.
 
